--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,21 +1,11 @@
-# Languages
-#   Create a section for each of your site's languages.
-#   Documentation: https://docs.hugoblox.com/reference/language/
+ko:
+  title: 박지유의 페이지
+  languageName: 한국어
+  languageCode: ko-kr
+  weight: 1
 
-# Default language
 en:
-  languageCode: ko-KR
-  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-  #contentDir: content/en
-# Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+  title: page of Park Ji Yu
+  languageName: English
+  languageCode: en-us
+  weight: 2
