--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,11 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
+defaultContentLanguage: ko
+defaultContentLanguageInSubdir: true   # /ko/ /en/ 경로로 분리하고 싶으면 true, 루트에 ko를 두고 싶으면 false
+
 title: Creator's Landing Page | Hugo Theme # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://one2-3.github.io/' # Website URL
 
 ############################
 ## PAGE OPTIONS
