메뉴 경로 수정

--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -4,13 +4,13 @@
 
 main:
   - name: Home
-    url: /#top
+    url: /en/#top
     weight: 10
   - name: Features
-    url: /#features
+    url: /en/#features
     weight: 20
   - name: Solutions
-    url: /#solutions
+    url: /en/#solutions
     weight: 30
   - name: Resources
     weight: 40
