--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,9 +4,9 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 defaultContentLanguage: ko
-defaultContentLanguageInSubdir: true   # /ko/ /en/ 경로로 분리하고 싶으면 true, 루트에 ko를 두고 싶으면 false
+defaultContentLanguageInSubdir: true # /ko/ /en/ 경로로 분리하고 싶으면 true, 루트에 ko를 두고 싶으면 false
 
-title: Creator's Landing Page | Hugo Theme # Website name
+title: J1YU Portpolio # Website name
 baseURL: 'https://one2-3.github.io/' # Website URL
 
 ############################
@@ -42,9 +42,7 @@ cascade:
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: ko
 hasCJKLanguage: false
-defaultContentLanguageInSubdir: false
 removePathAccents: true
 
 ############################
