언어 재설정

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,11 +1,11 @@
 ko:
-  title: 박지유의 페이지
+  title: 박지유 포트폴리오
   languageName: 한국어
   languageCode: ko-kr
   weight: 1
 
 en:
-  title: page of Park Ji Yu
+  title: Portpolio of Park Ji Yu
   languageName: English
   languageCode: en-us
   weight: 2
