--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -31,6 +31,7 @@ marketing:
     local_business_type: ''
     org_name: '박지유'
     org_url: 'https://one2-3.github.io'
+    org_logo: '/media/logo.png'
     description: '박지유 포트폴리오'
   analytics:
     google_analytics: ''
