자기소개 페이지 추가

--- a/config/_default/menus.ko.yaml
+++ b/config/_default/menus.ko.yaml
@@ -6,6 +6,9 @@ main:
   - name: Home
     url: /ko/
     weight: 10
+  - name: 소개
+    url: /ko/about/
+    weight: 15
   - name: Features
     url: /ko/
     weight: 20
