프로젝트 상세페이지 추가

--- a/config/_default/menus.ko.yaml
+++ b/config/_default/menus.ko.yaml
@@ -19,7 +19,7 @@ main:
     hasChildren: true
   - parent: 프로젝트
     name: 프로젝트1
-    url: /ko/project/
+    url: /ko/project/p1/
   - parent: 프로젝트
     name: 프로젝트2
     url: /ko/project/
